<resources>
    <string name="app_name">Hillfort App</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="hint_hillfortNotes">Notes</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_saveHillfort">Save</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save Hillfort </string>

    <string name="button_takeImage"> Take Image </string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_location">Set Location</string>

    <string name="select_hillfort_image">Select image</string>
    <string name="change_hillfort_image">Change image</string>
    <string name="add_hillfort_image">Add another Image</string>

    //Login
    <string name="password">Password </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="Signin">Sign in</string>
    <string name="Signup">Sign up</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="show_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_fav">Favourites</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="title_activity_hillfort_maps">Map of all Hillforts</string>


    <string name="hillfort_image_placeholder">Hillfort Imagee</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>

    <!-- START Firebase Resources-->
    <string name="title_activity_login"> Signup/Login to Hillfort</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="calories_burned_vs_calories_consumed">Calories Burned vs. Calories Consumed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
