<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="false"
        android:id="@+id/item_delete"
        android:title="@string/menu_deleteHillfort"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelHillfort"
        app:showAsAction="always"/>


    <item
        android:id="@+id/item_settings"
        android:orderInCategory="200"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_logout"
        android:orderInCategory="300"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>