<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <group android:checkableBehavior="single">
  <item
      android:id="@+id/action_add"
      android:title="@string/menu_addHillfort"
      android:icon="@drawable/ic_add"
      app:showAsAction="never"
 />

  <item
      android:id="@+id/action_fav"
      android:title="@string/open_fav"
      android:icon="@drawable/fav_black"
      app:showAsAction="never"
      />

  <item
      android:id="@+id/item_map"
      android:icon="@android:drawable/ic_menu_mapmode"
      android:title="@string/menu_showMap"
      app:showAsAction="never"/>
  </group>

  <item android:title="Communicate">
    <menu>
      <item
          android:id="@+id/nav_share"
          android:icon="@drawable/ic_share"
          android:title="Share" />
      <item
          android:id="@+id/nav_send"
          android:icon="@drawable/ic_send"
          android:title="Close" />
    </menu>
  </item>



  <item android:title="Access Control">
    <menu>
  <item
      android:id="@+id/item_logout"
      android:title="@string/menu_logout"
      android:visible="true"
      app:showAsAction="never" />

  <item
      android:id="@+id/action_close"
      android:title="@string/close"
      android:icon="@drawable/ic_close2"
      app:showAsAction="never"
      />
    </menu>
  </item>
</menu>