<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/item_add2"
      android:icon="@android:drawable/ic_menu_add"
      android:title=""
      app:showAsAction="always" />

  <item
      android:id="@+id/item_map"
      android:icon="@android:drawable/ic_menu_mapmode"
      android:title=""
      app:showAsAction="always"/>


  <item
      android:id="@+id/item_add"
      android:orderInCategory="100"
      android:title="@string/menu_addHillfort"
      app:showAsAction="never" />

  <item
      android:id="@+id/item_settings"
      android:orderInCategory="200"
      android:title="@string/settings"
      app:showAsAction="never" />

  <item
      android:id="@+id/item_logout"
      android:orderInCategory="300"
      android:title="@string/logout"
      app:showAsAction="never" />
</menu>