<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/hillfort2"
tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:layout_marginTop="350dp"
        android:orientation="vertical">



        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:padding="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/Signin"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="220dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:text="@string/Signup"
                android:textSize="20dp" />
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="sans-serif-medium"
        android:text="HILLFORTS"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="900"
        android:textSize="70dp"
        android:background="@color/colorPrimaryDark"/>


</RelativeLayout>