<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"

  tools:context=".views.hillfort.HillfortView">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="-16dp">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:fitsSystemWindows="true"
      app:elevation="0dip"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/appBarLayout"
        android:layout_alignParentBottom="true">


      <EditText
          android:id="@+id/hillfortTitle"
          android:layout_width="390dp"
          android:layout_height="57dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="60dp"
          android:layout_marginEnd="9dp"
          android:hint="@string/hint_hillfortTitle"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/description"
            android:layout_width="392dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:hint="@string/hint_hillfortDescription"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hillfortTitle"

            />

        <EditText
            android:id="@+id/notes"
            android:layout_width="309dp"
            android:layout_height="104dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:hint="@string/hint_hillfortNotes"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:maxLines="5"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

      <CheckBox
          android:id="@+id/visited_checkbox"
          android:layout_width="76dp"
          android:layout_height="54dp"
          android:layout_marginStart="20dp"
          android:layout_marginTop="20dp"
          android:text="Visited"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/notes" />


      <Button
          android:id="@+id/datePicker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="5dp"
          android:onClick="clickDatePicker"
          android:text="SET DATE"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toEndOf="@+id/visited_checkbox"
          app:layout_constraintTop_toBottomOf="@+id/notes"
          tools:ignore="OnClick" />

      <TextView
          android:id="@+id/setDate"
          android:layout_width="wrap_content"
          android:layout_height="29dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="36dp"
          android:layout_marginEnd="60dp"
          android:fontFamily="sans-serif-medium"
          android:text="../../.."
          android:textFontWeight="800"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toEndOf="@+id/dateText"
          app:layout_constraintTop_toBottomOf="@+id/notes" />

      <Button

          android:id="@+id/chooseImage"
          android:layout_width="181dp"
          android:layout_height="43dp"
          android:layout_marginStart="13dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="19dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:text="@string/button_addImage"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/datePicker" />


      <ImageView
          android:id="@+id/hillfortImage"
          android:layout_width="173dp"
          android:layout_height="115dp"
          android:layout_marginStart="20dp"
          android:layout_marginTop="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/chooseImage"
          app:srcCompat="@mipmap/ic_launcher" />

      <Button
          android:id="@+id/hillfortLocation"
          android:layout_width="160dp"
          android:layout_height="45dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:stateListAnimator="@null"
          android:text="@string/button_location"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/datePicker" />


      <TextView
          android:id="@+id/latText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-medium"
          android:text="Lat: "
          android:textFontWeight="800"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.629"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/hillfortLocation" />

      <TextView
          android:id="@+id/latVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="180dp"
          android:fontFamily="sans-serif-medium"
          android:text="...."
          android:textFontWeight="800"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.608"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/latText" />

      <TextView
          android:id="@+id/longText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:fontFamily="sans-serif-medium"
          android:text="Long: "
          android:textFontWeight="800"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.65"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/latText" />

      <TextView
          android:id="@+id/longVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="180dp"
          android:layout_marginTop="36dp"
          android:fontFamily="sans-serif-medium"
          android:text="...."
          android:textFontWeight="800"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.608"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/latVal" />

      <RatingBar
          android:id="@+id/ratingBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="20dp"
          android:background="@color/colorPrimary"
          android:numStars="5"
          android:stepSize="0.5"
          android:theme="@style/Widget.AppCompat.RatingBar"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/hillfortImage" />

      <Button
          android:id="@+id/ratingButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"

          android:layout_marginTop="20dp"
          android:text="Set Rating"
          app:layout_constraintStart_toEndOf="@+id/ratingBar"
          app:layout_constraintTop_toBottomOf="@+id/hillfortImage" />

      <TextView
          android:id="@+id/dateText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="36dp"
          android:layout_marginEnd="3dp"
          android:fontFamily="sans-serif-medium"
          android:text="Date: "
          android:textFontWeight="800"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.016"
          app:layout_constraintStart_toEndOf="@+id/datePicker"
          app:layout_constraintTop_toBottomOf="@+id/notes" />

        <ImageView
            android:id="@+id/fav_button"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/notes"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:srcCompat="@drawable/fav_white" />

      <com.google.android.material.bottomnavigation.BottomNavigationView
          android:id="@+id/bottomNav"
          android:background="@color/colorAccent"
          android:layout_width="404dp"
          android:layout_height="62dp"
          app:menu="@menu/bottom_nav"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>